--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.2.2"
+scikit-learn = "^1.5.0"
+matplotlib = "^3.9.0"
+seaborn = "^0.13.2"
+xgboost = "^2.1.0"
 
 
 [build-system]
